<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_page_tiles" >

    <RelativeLayout
        android:id="@+id/rl_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/label_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_header" />

        <EditText
            android:id="@+id/taskcreate_header_text_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_header"
            android:inputType="text" />

        <TextView
            android:id="@+id/label_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/taskcreate_header_text_top"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/task_state"
            android:gravity="bottom|left"
            android:text="@string/task_state_label" />

        <CheckBox
            android:id="@+id/task_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/taskcreate_header_text_top" />

        <TextView
            android:id="@+id/label_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_state"
            android:layout_marginTop="10dp"
            android:gravity="bottom|left"
            android:text="@string/task_due_label" />

        <EditText
            android:id="@+id/due_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_due_date"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:inputType="datetime"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/label_remider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/due_date"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="10dp"
            android:gravity="bottom|left"
            android:text="@string/task_reminder_label" />

        <CheckBox
            android:id="@+id/reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/due_date" />

        <LinearLayout
            android:id="@+id/reminder_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_remider"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2" >

            <EditText
                android:id="@+id/date_reminder"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:inputType="datetime"
                android:onClick="onClick" />

            <EditText
                android:id="@+id/time_reminder"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:inputType="datetime"
                android:onClick="onClick" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/reminder_container"
            android:layout_marginTop="10dp"
            android:gravity="bottom|left"
            android:text="@string/task_priority_label" />

        <Spinner
            android:id="@+id/spinner_priority"
            style="@style/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/reminder_container"
            android:drawSelectorOnTop="true"
            android:entries="@array/priority_entries"
            android:entryValues="@array/priority_values" />

        <ToggleButton
            android:id="@+id/taskcreate_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/spinner_priority"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/btn_toggle"
            android:checked="false"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:id="@+id/label_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/taskcreate_lock"
            android:layout_below="@+id/label_priority"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/taskcreate_lock"
            android:gravity="bottom|left"
            android:text="@string/task_inputarea_label" />

        <EditText
            android:id="@+id/taskcreate_text_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskcreate_lock"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textMultiLine"
            android:lines="10"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/taskcreate_save"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskcreate_text_top"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/button_save" />
    </RelativeLayout>

</ScrollView>